--- a/index.html
+++ b/index.html
@@ -100,14 +100,18 @@
     .page-wrapper {
       position: relative;
       max-width: 1100px;
-      margin: 2.5rem auto;
-      padding: 2rem 0 3rem;
-      background: rgba(255, 255, 255, 0.03);
-      border: 1px solid rgba(255, 255, 255, 0.14);
-      border-radius: 18px;
+      margin: 3.5rem auto;
+      padding: 2.5rem 0 3.5rem;
+
+      /* Stronger contrast from background */
+      background: linear-gradient(180deg, #141414 0%, #0f0f0f 100%);
+      border: 1px solid rgba(255, 255, 255, 0.22);
+      border-radius: 22px;
+
       box-shadow:
-        0 30px 80px rgba(0, 0, 0, 0.75),
-        0 0 0 1px rgba(255,255,255,0.06) inset;
+        0 40px 120px rgba(0, 0, 0, 0.85),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
+
       overflow: hidden;
     }
 
